Fixing issues with Safari's imcompatability with my SVG file. Becuase SVG was imported from Canva and is not a true vector-only SVG, Safari has issues with background fill on the logo and not supporting favicon. PNG file being used instead. Redesigned navigation tab and some styling. Added logo to nav, removed Home tab as logo and site name are clickable home link. Renamed tabs and moved Sign Up/My Profile (depending on user login status) to the right side of the bar by Login.

--- a/Get2KnowMe/client/styles/Home.css
+++ b/Get2KnowMe/client/styles/Home.css
@@ -40,7 +40,8 @@
 }
 
 .home-logo {
-  max-width: 200px;
+  max-width: 290px;
+  max-height: 400px;
   width: 100%;
   height: auto;
   display: block;
